--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "lint": "eslint \"src/**/*.ts\" --fix",
     "build": "npx tsc",
     "archive": "npm-pack-zip",
-    "set-handler": "aws lambda update-function-configuration --function-name %npm_package_name% --handler dist/index.handler",
-    "deploy": "npm run build && npm run archive && aws lambda update-function-code --function-name %npm_package_name% --zip-file fileb://%npm_package_name%.zip > deploy.log"
+    "set-handler": "aws lambda update-function-configuration --function-name $npm_package_name --handler dist/index.handler",
+    "deploy": "npm run build && npm run archive && aws lambda update-function-code --function-name $npm_package_name --zip-file fileb://$npm_package_name.zip > deploy.log"
   },
   "license": "ISC",
   "author": "nana4rider",
